Fixed an error in Turkish translation

--- a/static/locales/tr.yaml
+++ b/static/locales/tr.yaml
@@ -425,7 +425,7 @@ Channel:
   Channel has been removed from your subscriptions: 'Kanal aboneliklerinizden kaldırıldı'
   Removed subscription from $ other channel(s): 'Diğer $ kanallarından abonelik kaldırıldı'
   Added channel to your subscriptions: 'Kanal aboneliklerinize eklendi'
-  Search Channel: 'Kanal ara'
+  Search Channel: 'Kanalda ara'
   Your search results have returned 0 results: 'Arama sonuçlarınız 0 sonuç verdi'
   Sort By: 'Sırala'
   Videos:
