Fixed an error in Turkish translation

--- a/static/locales/tr.yaml
+++ b/static/locales/tr.yaml
@@ -419,7 +419,7 @@ Profile:
   Profile Filter: Profil Filtresi
 Channel:
   Subscriber: 'Abone'
-  Subscribers: 'Aboneler'
+  Subscribers: 'Abone'
   Subscribe: 'Abone ol'
   Unsubscribe: 'Abonelikten çık'
   Channel has been removed from your subscriptions: 'Kanal aboneliklerinizden kaldırıldı'
